// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer should not lose data when pausing 1`] = `
Array [
  Array [
    "ontextentity",
    38,
  ],
  Array [
    "ontext",
    5,
    7,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onselfclosingtag",
  ],
  Array [
    "onopentagname",
    11,
    14,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    17,
    20,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing title tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    10,
    16,
  ],
  Array [
    "onopentagname",
    18,
    21,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    24,
    27,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal sitle tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;
